--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="">
+<html lang="en" ng-app="myApp">
 <head>
 	<meta charset="UTF-8">
 	<title>MadLibs</title>
 
 	<script src="https://code.angularjs.org/1.3.10/angular.js"></script>
+	<script src="js/myApp.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
 	<div class="container">
 		<nav class="nav-bar">
 			<span class="logo">
-				<img src="https://photos-5.dropbox.com/t/2/AACClDZbxiQS3nPoFT7w5-ySzyGs9aDT4nNYyQ9cinwvKg/12/15152010/png/32x32/3/1448449200/0/2/mad-lib-happy-face.png/ENyarI8BGHogAigC/4_yurSVYWZDQ9wUwpmplPAidMTOH5JCZi5jHI8C-nTE?size_mode=3&size=1600x1200">
+				<img src="img/happy-face.png">
 			</span>
 			<span class="mad-lib-logo">
 				<div>
-					<img height="80%" width="80%" src="https://photos-3.dropbox.com/t/2/AACIUvEazlVLGB_Vt1dQRe1Q28Xl58U6UvLcp2pUQL2ikQ/12/15152010/png/32x32/3/1448449200/0/2/ng-mad-libs-logo.png/ENyarI8BGHogAigC/eS66ujO0LLT9gOuJ5Ix5W_W2SVabAIIWgWFZf2ubFZs?size_mode=3&size=1600x1200">
+					<img height="80%" width="80%" src="img/madlib-logo.png">
 				</div>
 				<div>
 					<h1>Automate This!</h1>
