--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			</span>
 			<span class="mad-lib-logo">
 				<div>
-					<img height="80%" width="80%" src="img/madlib-logo.png">
+					<img height="80%" width="80%" src="img/ng-madlib.png">
 				</div>
 				<div>
 					<h1>Automate This!</h1>
