--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<div class="container">
+	<div class="container" ng-controller="madLibCtrl">
 		<nav class="nav-bar">
-			<span class="logo">
+			<div class="logo">
 				<img src="img/happy-face.png">
-			</span>
+			</div>
 			<span class="mad-lib-logo">
 				<div>
 					<img height="80%" width="80%" src="img/ng-madlibs.png">
