--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 	<title>MadLibs</title>
 
 	<script src="https://code.angularjs.org/1.3.10/angular.js"></script>
+
+	<script type="text/javascript" src="https://code.angularjs.org/1.3.10/angular-messages.min.js"></script>
 	<script src="js/myApp.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
@@ -26,24 +28,91 @@
 		</nav>
 		<hr>
 		<h1>Provide the following keywords:</h1>
-		<div>		
-			<ul>
-				<li><input type="text" placeholder="Male Name" ng-model="maleName"  /></li>
-				<li><input type="text" ng-model="dirtyTask" placeholder="Dirty Task" /></li>
-				<li><input type="text" ng-model="obnoxCeleb" placeholder="Obnoxious Celebrity" /></li>
-				<li><input type="text" ng-model="jobTitle" placeholder="Job Title" /></li>
-				<li><input type="text" ng-model="celebrity" placeholder="Celebrity" /></li>
-				<li><input type="text" ng-model="hugeNumber" placeholder="Huge Number" /></li>
-				<li><input type="text" ng-model="tediousTask" placeholder="Tedious Task" /></li>
-				<li><input type="text" ng-model="uselessSkill" placeholder="Useless Skill" /></li>
-				<li><input type="text" ng-model="adjective" placeholder="Adjective" /></li>
-			</ul>
+		<div ng-show="wordInput">	
+			<form name="myMadlibs" ng-submit="showValid()" novalidate>	
+				<ul>
+					<li>
+						<input type="text" placeholder="Male Name" name="maleName" ng-model="maleName" required ng-maxLength="10" ng-minLength="3" /> 
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.maleName.$error">
+							<span ng-message="required">Male Name is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed has been exceeded (10 characters max)</span>
+						</span>
+					 </li>
+					<li>
+						<input type="text" name="dirtyTask" ng-model="dirtyTask" placeholder="Dirty Task" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.dirtyTask.$error">
+							<span ng-message="required">Dirty Task is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed has been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="obnoxCeleb" ng-model="obnoxCeleb" placeholder="Obnoxious Celebrity" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
+							<span ng-message="required">Obnoxious Celebrity is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="jobTitle" ng-model="jobTitle" placeholder="Job Title" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
+							<span ng-message="required">Job Title is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="celebrity" ng-model="celebrity" placeholder="Celebrity" required ng-minLength="3" ng-maxLength="20" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.celebrity.$error">
+							<span ng-message="required">Celebrity is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="number" name="hugeNumber" ng-model="hugeNumber" placeholder="Huge Number" required min="0" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.hugeNumber.$error">
+							<span ng-message="required">Huge Number is required</span>
+							<span ng-message="min">Must be a positive number</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="tediousTask" ng-model="tediousTask" placeholder="Tedious Task" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.tediousTask.$error">
+							<span ng-message="required">Tedious Task is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="uselessSkill" ng-model="uselessSkill" placeholder="Useless Skill" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.uselessSkill.$error">
+							<span ng-message="required">Useless Skill is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+					<li>
+						<input type="text" name="adjective" ng-model="adjective" placeholder="Adjective" required ng-maxLength="20" ng-minLength="3" />
+						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.adjective.$error">
+							<span ng-message="required">Adjective is required</span>
+							<span ng-message="minlength">Minimum of 3 characters is required</span>
+							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+						</span>
+					</li>
+				</ul>
+				<input type="submit" value="Generate My MadLib" />
+			</form>
 		</div>
 		<hr>
 		<div>
-			<div>
-			<p><span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> was a <span class="text-box"><span ng-show="jobTitle"> {{ jobTitle }} </span><span ng-hide="jobTitle">Job Title</span></span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="text-box"><span ng-show="tediousTask"> {{ tediousTask }} </span><span ng-hide="tediousTask">Tedious Task</span></span> and <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span>. So, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> met with his life mentor <span class="text-box"><span ng-show="celebrity">{{ celebrity }}</span><span ng-hide="celebrity">Celebrity</span></span> who told him to learn how to <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> with Thinkful. Thinkful didn't offer a course on <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> so he studied programming instead.</p>
-			<p>What a great decision! With his new skills, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> built a(n) <span class="text-box"><span ng-show="adjective"> {{ adjective }} </span><span ng-hide="adjective">Adjective</span></span> robot named <span class="text-box"><span ng-show="obnoxCeleb">{{ obnoxCeleb }} </span><span ng-hide="obnoxCeleb">Obnoxious Celebrity</span></span> that not only loved <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span> but did it <span class="text-box"><span ng-show="hugeNumber"> {{ hugeNumber }}</span><span ng-hide="hugeNumber">Huge Number</span></span> times faster.</p></div>
+			<div ng-hide="wordInput">
+				<p><span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> was a <span class="text-box"><span ng-show="jobTitle"> {{ jobTitle }} </span><span ng-hide="jobTitle">Job Title</span></span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="text-box"><span ng-show="tediousTask"> {{ tediousTask }} </span><span ng-hide="tediousTask">Tedious Task</span></span> and <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span>. So, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> met with his life mentor <span class="text-box"><span ng-show="celebrity">{{ celebrity }}</span><span ng-hide="celebrity">Celebrity</span></span> who told him to learn how to <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> with Thinkful. Thinkful didn't offer a course on <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> so he studied programming instead.</p>
+				<p>What a great decision! With his new skills, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> built a(n) <span class="text-box"><span ng-show="adjective"> {{ adjective }} </span><span ng-hide="adjective">Adjective</span></span> robot named <span class="text-box"><span ng-show="obnoxCeleb">{{ obnoxCeleb }} </span><span ng-hide="obnoxCeleb">Obnoxious Celebrity</span></span> that not only loved <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span> but did it <span class="text-box"><span ng-show="hugeNumber"> {{ hugeNumber }}</span><span ng-hide="hugeNumber">Huge Number</span></span> times faster.</p>
+				<input type="button" ng-click="wordInput=true" value="Start Over" />
+			</div>
 		</div>
 	</div>
 </body>
