--- a/index.html
+++ b/index.html
@@ -5,116 +5,123 @@
 	<title>MadLibs</title>
 
 	<script src="https://code.angularjs.org/1.3.10/angular.js"></script>
-
+	<!--Angular plug-in for Animation -->
+	<script type="text/javascript" src="https://code.angularjs.org/1.2.18/angular-animate.min.js"></script>
+	<!-- Angular ng-messages plug-in -->
 	<script type="text/javascript" src="https://code.angularjs.org/1.3.10/angular-messages.min.js"></script>
 	<script src="js/myApp.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+	<!-- Optional theme -->
+    <link rel="stylesheet" href="https://bootswatch.com/paper/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/styles.css">
 </head>
 <body>
-	<div class="container" ng-controller="madLibCtrl">
-		<nav class="nav-bar">
-			<div class="logo">
-				<img src="img/happy-face.png">
-			</div>
-			<span class="mad-lib-logo">
-				<div>
-					<img height="80%" width="80%" src="img/ng-madlibs.png">
+	<div class="container">
+		<div class="madlib-container" ng-controller="madLibCtrl">
+			<nav class="nav-bar">
+				<div class="logo">
+					<img src="img/happy-face.png">
 				</div>
-				<div>
-					<h1>Automate This!</h1>
-				</div>
-			</span>
+				<span class="mad-lib-logo">
+					<div>
+						<img height="80%" width="80%" src="img/ng-madlibs.png">
+					</div>
+					<div>
+						<h1>Automate This!</h1>
+					</div>
+				</span>
 
-		</nav>
-		<hr>
-		<div ng-show="wordInput">	
-			<h1>Provide the following keywords:</h1>
-			<form name="myMadlibs" ng-submit="showValid()" novalidate>	
-				<ul>
-					<li>
-						<input type="text" placeholder="Male Name" name="maleName" ng-model="maleName" required ng-maxLength="10" ng-minLength="3" /> 
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.maleName.$error">
-							<span ng-message="required">Male Name is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed has been exceeded (10 characters max)</span>
-						</span>
-					 </li>
-					<li>
-						<input type="text" name="dirtyTask" ng-model="dirtyTask" placeholder="Dirty Task" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.dirtyTask.$error">
-							<span ng-message="required">Dirty Task is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed has been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="obnoxCeleb" ng-model="obnoxCeleb" placeholder="Obnoxious Celebrity" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
-							<span ng-message="required">Obnoxious Celebrity is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="jobTitle" ng-model="jobTitle" placeholder="Job Title" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
-							<span ng-message="required">Job Title is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="celebrity" ng-model="celebrity" placeholder="Celebrity" required ng-minLength="3" ng-maxLength="20" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.celebrity.$error">
-							<span ng-message="required">Celebrity is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="number" name="hugeNumber" ng-model="hugeNumber" placeholder="Huge Number" required min="0" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.hugeNumber.$error">
-							<span ng-message="required">Huge Number is required</span>
-							<span ng-message="min">Must be a positive number</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="tediousTask" ng-model="tediousTask" placeholder="Tedious Task" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.tediousTask.$error">
-							<span ng-message="required">Tedious Task is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="uselessSkill" ng-model="uselessSkill" placeholder="Useless Skill" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.uselessSkill.$error">
-							<span ng-message="required">Useless Skill is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-					<li>
-						<input type="text" name="adjective" ng-model="adjective" placeholder="Adjective" required ng-maxLength="20" ng-minLength="3" />
-						<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.adjective.$error">
-							<span ng-message="required">Adjective is required</span>
-							<span ng-message="minlength">Minimum of 3 characters is required</span>
-							<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
-						</span>
-					</li>
-				</ul>
-				<input type="submit" value="Generate My MadLib" />
-			</form>
-		</div>
-		<div>
-			<div ng-hide="wordInput">
-				<p><span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> was a <span class="text-box"><span ng-show="jobTitle"> {{ jobTitle }} </span><span ng-hide="jobTitle">Job Title</span></span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="text-box"><span ng-show="tediousTask"> {{ tediousTask }} </span><span ng-hide="tediousTask">Tedious Task</span></span> and <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span>. So, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> met with his life mentor <span class="text-box"><span ng-show="celebrity">{{ celebrity }}</span><span ng-hide="celebrity">Celebrity</span></span> who told him to learn how to <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> with Thinkful. Thinkful didn't offer a course on <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> so he studied programming instead.</p>
-				<p>What a great decision! With his new skills, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> built a(n) <span class="text-box"><span ng-show="adjective"> {{ adjective }} </span><span ng-hide="adjective">Adjective</span></span> robot named <span class="text-box"><span ng-show="obnoxCeleb">{{ obnoxCeleb }} </span><span ng-hide="obnoxCeleb">Obnoxious Celebrity</span></span> that not only loved <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span> but did it <span class="text-box"><span ng-show="hugeNumber"> {{ hugeNumber }}</span><span ng-hide="hugeNumber">Huge Number</span></span> times faster.</p>
-				<button type="reset" ng-click="resetForm()">Start Over</button>
+			</nav>
+			<hr>
+			<div>
+				<div class="content fade-show" ng-show="wordInput">	
+					<h1>Provide the following keywords:</h1>
+					<form name="myMadlibs" ng-submit="showValid()" novalidate>	
+						<ul>
+							<li>
+								<input type="text" placeholder="Male Name" name="maleName" ng-model="maleName" required ng-maxLength="10" ng-minLength="3" /> 
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.maleName.$error">
+									<span ng-message="required">Male Name is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed has been exceeded (10 characters max)</span>
+								</span>
+							 </li>
+							<li>
+								<input type="text" name="dirtyTask" ng-model="dirtyTask" placeholder="Dirty Task" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.dirtyTask.$error">
+									<span ng-message="required">Dirty Task is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed has been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="obnoxCeleb" ng-model="obnoxCeleb" placeholder="Obnoxious Celebrity" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
+									<span ng-message="required">Obnoxious Celebrity is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="jobTitle" ng-model="jobTitle" placeholder="Job Title" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.obnoxCeleb.$error">
+									<span ng-message="required">Job Title is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="celebrity" ng-model="celebrity" placeholder="Celebrity" required ng-minLength="3" ng-maxLength="20" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.celebrity.$error">
+									<span ng-message="required">Celebrity is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="number" name="hugeNumber" ng-model="hugeNumber" placeholder="Huge Number" required min="0" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.hugeNumber.$error">
+									<span ng-message="required">Huge Number is required</span>
+									<span ng-message="min">Must be a positive number</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="tediousTask" ng-model="tediousTask" placeholder="Tedious Task" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.tediousTask.$error">
+									<span ng-message="required">Tedious Task is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="uselessSkill" ng-model="uselessSkill" placeholder="Useless Skill" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.uselessSkill.$error">
+									<span ng-message="required">Useless Skill is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+							<li>
+								<input type="text" name="adjective" ng-model="adjective" placeholder="Adjective" required ng-maxLength="20" ng-minLength="3" />
+								<span ng-if="myMadlibs.$submitted" ng-messages="myMadlibs.adjective.$error">
+									<span ng-message="required">Adjective is required</span>
+									<span ng-message="minlength">Minimum of 3 characters is required</span>
+									<span ng-message="maxlength">The maximum character allowed had been exceeded (20 characters max)</span>
+								</span>
+							</li>
+						</ul>
+						<input type="submit" value="Generate My MadLib" />
+					</form>
+				</div>
+				<div class="content">
+					<div class="fade-show" ng-hide="wordInput">
+						<p><span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> was a <span class="text-box"><span ng-show="jobTitle"> {{ jobTitle }} </span><span ng-hide="jobTitle">Job Title</span></span> who loved technology. Although he loved parts of his job, he absolutely hated <span class="text-box"><span ng-show="tediousTask"> {{ tediousTask }} </span><span ng-hide="tediousTask">Tedious Task</span></span> and <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span>. So, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> met with his life mentor <span class="text-box"><span ng-show="celebrity">{{ celebrity }}</span><span ng-hide="celebrity">Celebrity</span></span> who told him to learn how to <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> with Thinkful. Thinkful didn't offer a course on <span class="text-box"><span ng-show="uselessSkill"> {{ uselessSkill }}</span><span ng-hide="uselessSkill">Useless Skill</span></span> so he studied programming instead.</p>
+						<p>What a great decision! With his new skills, <span class="text-box"><span ng-show="maleName"> {{ maleName }} </span><span ng-hide="maleName">Male Name</span></span> built a(n) <span class="text-box"><span ng-show="adjective"> {{ adjective }} </span><span ng-hide="adjective">Adjective</span></span> robot named <span class="text-box"><span ng-show="obnoxCeleb">{{ obnoxCeleb }} </span><span ng-hide="obnoxCeleb">Obnoxious Celebrity</span></span> that not only loved <span class="text-box"><span ng-show="dirtyTask"> {{ dirtyTask }}</span><span ng-hide="dirtyTask">Dirty Task</span></span> but did it <span class="text-box"><span ng-show="hugeNumber"> {{ hugeNumber }}</span><span ng-hide="hugeNumber">Huge Number</span></span> times faster.</p>
+						<button type="reset" ng-click="resetForm()">Start Over</button>
+					</div>
+				</div>
 			</div>
 		</div>
-		<p>Pristine: {{ myMadlibs.$pristine }}</p>
-		<pre>Touched: {{ myMadlibs.maleName.$touched }}</pre>
 	</div>
 </body>
 </html>
